<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motion_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="bartlomiej.styczen@pomagier.info">Bartlomiej Styczen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <!-- <depend>generate_path</depend> -->
  <!-- <depend>generate_trajectory</depend> -->
  <!-- <depend>spawn_collision_items</depend> -->
  <!-- <depend>custom_interfaces</depend> -->
  <!-- <depend>helpers_commons</depend> -->
  <!-- <depend>helpers_vision</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
