<package format="2">
  <name>data_store_view</name>
  <version>1.1.1</version>
  <description>data_store_view</description>
  <maintainer email="saffenreuther_marcin@protonmail.com">Marcin Saffenreuther</maintainer>

  <license>BSD</license>

  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>helpers_commons</depend>
  <depend>helpers_vision</depend>
  <depend>custom_interfaces</depend>
  <depend>qtbase5-dev</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>sensor_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>parameters_server</depend>
  <depend>avena_bringup</depend>
  <depend>security_rgb</depend>
  <depend>rclcpp_action</depend>
  <depend>rgb_diff</depend>
  <depend>detect_server</depend>
  <depend>data_store</depend>
  <depend>rgbd_sync</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
